# fastapi-order-book

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  models.py  utils.py
app/api/: deps.py  main.py
app/api/routes/: books.py  limit_orders.py  market_orders.py
app/core/: config.py  db.py
app/routers/: orders.py  pairs.py
app/schemas/: order.py  pair.py
tests/: conftest.py
tests/api/routes/: test_books.py
